changed tables so they wrap, disable buttons on essay wizard loading, no longer overwrite when hitting 'next'

--- a/public/assets/skins/content/CUSTOM/content.css
+++ b/public/assets/skins/content/CUSTOM/content.css
@@ -12,8 +12,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
+  line-height: 2;
 }
 
 @media screen {
